[gd_scene load_steps=31 format=3 uid="uid://boou8o8uywpnh"]

[ext_resource type="Script" path="res://assets/Scripts/chapters.gd" id="1_aoovc"]
[ext_resource type="Texture2D" uid="uid://kuyabmwgc1ee" path="res://assets/Sprite/UI/2.Chapters/chaptermenusbackground.png" id="2_cice4"]
[ext_resource type="Texture2D" uid="uid://cw0tqnfsgqbtk" path="res://assets/Sprite/UI/arrow.png" id="3_vhoqs"]
[ext_resource type="FontFile" uid="uid://bgort6x02naib" path="res://assets/fonts/Retro Gaming.ttf" id="4_45iv4"]
[ext_resource type="Texture2D" uid="uid://cbnot75iqk2j2" path="res://assets/Sprite/UI/2.Chapters/iconchapter3.png" id="4_q2rnh"]
[ext_resource type="Texture2D" uid="uid://bdl16a87xyqrq" path="res://assets/Sprite/UI/setaback.png" id="5_vcf2d"]
[ext_resource type="Texture2D" uid="uid://d1nsdf00mvgjv" path="res://assets/Sprite/UI/2.Chapters/chapter2icon.png" id="7_movsd"]
[ext_resource type="Texture2D" uid="uid://dti7dv1aawhij" path="res://assets/Sprite/UI/estrelaCAPITULO1.png" id="8_kmjx5"]
[ext_resource type="Texture2D" uid="uid://dym82r2ybce1d" path="res://assets/Sprite/UI/retrySeta.png" id="9_ds8m1"]
[ext_resource type="Texture2D" uid="uid://bkmr0qwq30a3h" path="res://assets/Sprite/UI/Homebotao.png" id="10_yhn6t"]
[ext_resource type="Texture2D" uid="uid://dmq5byxieejp3" path="res://assets/Sprite/UI/3.Levels/1.png" id="11_aoopx"]

[sub_resource type="Theme" id="Theme_ysxye"]

[sub_resource type="LabelSettings" id="LabelSettings_631ye"]
font = ExtResource("4_45iv4")
font_size = 31
font_color = Color(0.823529, 0.823529, 0.823529, 0.823529)

[sub_resource type="LabelSettings" id="LabelSettings_kfm2e"]
font = ExtResource("4_45iv4")
font_size = 28

[sub_resource type="Animation" id="Animation_r1643"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arrow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8civw"]
resource_name = "blink"
length = 2.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arrow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.5, 1.3, 1.5, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5x4ac"]
_data = {
"RESET": SubResource("Animation_r1643"),
"blink": SubResource("Animation_8civw")
}

[sub_resource type="LabelSettings" id="LabelSettings_0a0tm"]
font = ExtResource("4_45iv4")
font_size = 31
font_color = Color(0.823529, 0.823529, 0.823529, 0.823529)

[sub_resource type="LabelSettings" id="LabelSettings_g2qt0"]
font = ExtResource("4_45iv4")
font_size = 31

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bpopb"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
skew = Vector2(1, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.374139, 0.374139, 0.374139, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 1
expand_margin_top = 11.0
expand_margin_bottom = 11.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0fddg"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
skew = Vector2(1, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.374139, 0.374139, 0.374139, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 1
expand_margin_top = 11.0
expand_margin_bottom = 11.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eyuce"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
skew = Vector2(1, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.374139, 0.374139, 0.374139, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 1
expand_margin_top = 11.0
expand_margin_bottom = 11.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5idco"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
skew = Vector2(1, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.768627, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 1
expand_margin_top = 11.0
expand_margin_bottom = 11.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rxe72"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
skew = Vector2(1, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.374139, 0.374139, 0.374139, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 1
expand_margin_top = 11.0
expand_margin_bottom = 11.0

[sub_resource type="Theme" id="Theme_1dgsu"]
Button/colors/font_color = Color(0.984314, 0.87451, 0.87451, 1)
Button/colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
Button/colors/font_focus_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_disabled_color = Color(1, 1, 1, 0.4)
Button/colors/icon_focus_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_normal_color = Color(1, 1, 1, 1)
Button/colors/icon_pressed_color = Color(1, 1, 1, 1)
Button/constants/align_to_largest_stylebox = 0
Button/constants/h_separation = 4
Button/constants/icon_max_width = 0
Button/constants/outline_size = 1
Button/font_sizes/font_size = 31
Button/fonts/font = null
Button/styles/disabled = SubResource("StyleBoxFlat_bpopb")
Button/styles/focus = SubResource("StyleBoxFlat_0fddg")
Button/styles/hover = SubResource("StyleBoxFlat_eyuce")
Button/styles/normal = SubResource("StyleBoxFlat_5idco")
Button/styles/pressed = SubResource("StyleBoxFlat_rxe72")

[sub_resource type="LabelSettings" id="LabelSettings_1as06"]
font = ExtResource("4_45iv4")
font_size = 36
outline_color = Color(0, 0, 0, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-1, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_qb42t"]
load_path = "res://.godot/imported/arrow.png-3e4190f20e1f2c1ed5f7caeb6f3f125e.ctex"

[sub_resource type="Animation" id="Animation_rhjul"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arrow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_uaihh"]
resource_name = "blink"
length = 2.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arrow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.5, 1.3, 1.5, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_14lj0"]
_data = {
"RESET": SubResource("Animation_rhjul"),
"blink": SubResource("Animation_uaihh")
}

[node name="Chapters" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aoovc")
metadata/_edit_lock_ = true

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_cice4")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.132
anchor_top = 0.687
anchor_right = 0.59
anchor_bottom = 0.75
offset_left = -0.0639954
offset_top = -7.68002
offset_right = 0.319946
offset_bottom = -8.00003
color = Color(0.239216, 0.431373, 0.439216, 1)

[node name="Chapter1" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.194444
anchor_top = 0.3125
anchor_right = 0.201389
anchor_bottom = 0.3625
pivot_offset = Vector2(106, 48)
theme = SubResource("Theme_ysxye")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="Chpater3" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchor_left = 0.698785
anchor_top = 0.3125
anchor_right = 0.931424
anchor_bottom = 0.740625
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Chapter3Stars" type="Label" parent="Chpater3"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -36.0
offset_top = -40.0
offset_right = 36.0
grow_horizontal = 2
grow_vertical = 0
text = "/76*"
label_settings = SubResource("LabelSettings_631ye")

[node name="Chapter3Icon" type="Sprite2D" parent="Chpater3"]
unique_name_in_owner = true
modulate = Color(0.823529, 0.823529, 0.823529, 0.823529)
position = Vector2(133, 144)
scale = Vector2(0.647619, 0.647619)
texture = ExtResource("4_q2rnh")

[node name="Chapter3Label" type="Label" parent="Chpater3"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.729412)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -112.0
offset_right = 112.0
offset_bottom = 36.0
grow_horizontal = 2
text = "CHAPTER 3"
label_settings = SubResource("LabelSettings_kfm2e")
horizontal_alignment = 1

[node name="Chapter2" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchor_left = 0.37934
anchor_top = 0.3125
anchor_right = 0.611979
anchor_bottom = 0.740625
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Chapter2Stars" type="Label" parent="Chapter2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -36.0
offset_top = -40.0
offset_right = 36.0
grow_horizontal = 2
grow_vertical = 0
text = "/38*"
label_settings = SubResource("LabelSettings_631ye")

[node name="Chapter2Icon" type="Sprite2D" parent="Chapter2"]
unique_name_in_owner = true
modulate = Color(0.823529, 0.823529, 0.823529, 0.823529)
position = Vector2(134, 144)
scale = Vector2(0.647619, 0.647619)
texture = ExtResource("7_movsd")

[node name="Chapter2Label" type="Label" parent="Chapter2"]
unique_name_in_owner = true
modulate = Color(0.823529, 0.823529, 0.823529, 0.823529)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -112.0
offset_right = 112.0
offset_bottom = 36.0
grow_horizontal = 2
text = "CHAPTER 2"
label_settings = SubResource("LabelSettings_kfm2e")
horizontal_alignment = 1

[node name="Arrow" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(224, 184)
rotation = 1.5708
scale = Vector2(0.48, 0.48)
texture = ExtResource("3_vhoqs")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Arrow"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_5x4ac")
}
autoplay = "blink"

[node name="Chapter1Stars" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 152.0
offset_top = 432.0
offset_right = 301.0
offset_bottom = 472.0
text = "xx/15 *"
label_settings = SubResource("LabelSettings_0a0tm")

[node name="TotalStars" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 434.0
offset_top = 535.0
offset_right = 720.0
offset_bottom = 581.0
scale = Vector2(0.994975, 1)
text = "You have "
label_settings = SubResource("LabelSettings_g2qt0")
horizontal_alignment = 1

[node name="Back" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
anchor_left = 0.0833333
anchor_top = 0.8
anchor_right = 0.145833
anchor_bottom = 0.875
pivot_offset = Vector2(40, 0)
texture = ExtResource("5_vcf2d")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="LevelComplete" type="Control" parent="."]
layout_mode = 1
anchor_right = 0.999998
anchor_bottom = 1.0
offset_right = 768.002
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.599999, 1)
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="LevelComplete"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="Stars" type="HBoxContainer" parent="LevelComplete"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.354167
anchor_top = 0.421875
anchor_right = 0.648055
anchor_bottom = 0.578125
offset_right = -196.265
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.53333, 1)
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="1star" type="TextureRect" parent="LevelComplete/Stars"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("8_kmjx5")
stretch_mode = 3

[node name="2star" type="TextureRect" parent="LevelComplete/Stars"]
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("8_kmjx5")
stretch_mode = 5

[node name="3star" type="TextureRect" parent="LevelComplete/Stars"]
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("8_kmjx5")
stretch_mode = 3

[node name="CompletedLabel" type="Label" parent="LevelComplete"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.401563
anchor_top = 0.2875
anchor_right = 0.598437
anchor_bottom = 0.376563
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_1dgsu")
text = "Level completed!"
label_settings = SubResource("LabelSettings_1as06")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Restart" type="TextureRect" parent="LevelComplete"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.284722
anchor_top = 0.625
anchor_right = 0.381944
anchor_bottom = 0.8
offset_left = 0.000915527
offset_right = 0.000915527
pivot_offset = Vector2(93.3335, 0)
texture = ExtResource("9_ds8m1")
expand_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Home" type="TextureRect" parent="LevelComplete"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.451389
anchor_top = 0.625
anchor_right = 0.548611
anchor_bottom = 0.8
offset_left = 0.333313
offset_right = 0.666626
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(93.3335, 0)
texture = ExtResource("10_yhn6t")
expand_mode = 1

[node name="NextLevel" type="TextureRect" parent="LevelComplete"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.618056
anchor_top = 0.625
anchor_right = 0.715451
anchor_bottom = 0.8
offset_left = 0.00195313
offset_right = 0.00195313
pivot_offset = Vector2(93.3335, 0)
texture = ExtResource("11_aoopx")
expand_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Arrow" type="Sprite2D" parent="LevelComplete"]
position = Vector2(653.334, 536)
rotation = -1.5708
scale = Vector2(0.48, 0.800001)
texture = SubResource("CompressedTexture2D_qb42t")

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelComplete/Arrow"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_14lj0")
}
autoplay = "blink"

[connection signal="pressed" from="Chapter1" to="." method="_on_level_1_button_pressed"]
